[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/scenes/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/background/background.jpg" type="Texture" id=2]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( -27, 0.25992 )
scale = Vector2( 0.280271, 0.280271 )
texture = ExtResource( 2 )
centered = false

[node name="Identity" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 6.73253
margin_top = 5.75361
margin_right = 233.733
margin_bottom = 19.7536
text = "Reynaldy Rizki Saputra - 191524301"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_top = 42.6652
margin_right = 1023.0
margin_bottom = 130.665
text = "Transformation"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Triangles" type="Button" parent="."]
margin_left = 166.402
margin_top = 257.081
margin_right = 309.402
margin_bottom = 302.081
text = "Triangles"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rhombuses" type="Button" parent="."]
margin_left = 447.298
margin_top = 258.476
margin_right = 590.298
margin_bottom = 303.476
text = "Rhombuses"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RandomEllipses" type="Button" parent="."]
margin_left = 720.896
margin_top = 257.006
margin_right = 863.896
margin_bottom = 302.006
text = "Random Ellipses"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flower4" type="Button" parent="."]
margin_left = 166.402
margin_top = 354.081
margin_right = 309.402
margin_bottom = 399.081
text = "4 Petals Flower"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flower8" type="Button" parent="."]
margin_left = 447.298
margin_top = 355.476
margin_right = 590.298
margin_bottom = 400.476
text = "8 Petals Flower"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Batik" type="Button" parent="."]
margin_left = 720.896
margin_top = 354.006
margin_right = 863.896
margin_bottom = 399.006
text = "Batik"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crest" type="Button" parent="."]
margin_left = 447.896
margin_top = 474.476
margin_right = 590.896
margin_bottom = 519.476
text = "Crest"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Triangles" to="." method="_on_Triangles_pressed"]
[connection signal="pressed" from="Rhombuses" to="." method="_on_Rhombuses_pressed"]
[connection signal="pressed" from="RandomEllipses" to="." method="_on_RandomEllipses_pressed"]
[connection signal="pressed" from="Flower4" to="." method="_on_Flower4_pressed"]
[connection signal="pressed" from="Flower8" to="." method="_on_Flower8_pressed"]
[connection signal="pressed" from="Batik" to="." method="_on_Batik_pressed"]
[connection signal="pressed" from="Crest" to="." method="_on_Crest_pressed"]
